# Docker-Setups

./: Dockerfile  README.md  pyproject.toml
Fedora_Docker_File/: Dockerfile
RunDockerSetup/: run_docker_container.py
RunDockerSetup/working_folder/: README.md
Ubuntu Docker File/: Dockerfile  run-docker-volume.sh  run_docker_container.py
UbuntuDockerSetup/: pyproject.toml
UbuntuDockerSetup/ubuntudockersetup/: run_docker_container.py
Ubuntu_Docker_File/: Dockerfile  run_docker_container.py
Ubuntu_Docker_File/working_folder/: README.md
